try to fix overflow

--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -109,7 +109,7 @@ html[data-theme="dark"] {
     &__items--right {
       // flex-grow: 1;
       flex: 0 0 25%;
-      width: calc(3 / 12 * 100%);
+      width: auto;
       justify-content: flex-end;
 
       .icon-link,
